--- a/prms-bi-client/src/app/pages/bi/bi.component.html
+++ b/prms-bi-client/src/app/pages/bi/bi.component.html
@@ -1,2 +1,6 @@
-<div style=" width: 100%;" [ngStyle]="{ 'height': (screenHeight-150)+ 'px' }" #reportContainer id="reportContainer">
+<div #reportContainer id="reportContainer" *ngIf="this.paramId">
+</div>
+
+<div class="reports">
+    <a [routerLink]="'/bi/'+report?.id" *ngFor="let report of this.reportsInformation">{{report.description}}</a>
 </div>
