:sparkles: feat(bi): cosnume getBiReportWithCredentialsByreportName back service

--- a/prms-bi-client/src/app/pages/bi/bi.component.html
+++ b/prms-bi-client/src/app/pages/bi/bi.component.html
@@ -1,4 +1,4 @@
-<div #reportContainer id="reportContainer" *ngIf="this.reportId">
+<div #reportContainer id="reportContainer" *ngIf="this.reportName">
 </div>
 
 <h1 *ngIf="!this.reportName">No reportName</h1>
