--- a/prms-bi-client/src/app/pages/bi/bi.component.html
+++ b/prms-bi-client/src/app/pages/bi/bi.component.html
@@ -1,4 +1,5 @@
-<div #reportContainer id="reportContainer" *ngIf="this.reportName">
+<div class="reportDescription" id="reportDescription"></div>
+<div #reportContainer id="reportContainer" *ngIf="this.reportName" [style.height]="biHeight()">
 </div>
 
 <h1 *ngIf="!this.reportName">No reportName</h1>
