--- a/prms-bi-client/src/app/pages/playground/playground.component.html
+++ b/prms-bi-client/src/app/pages/playground/playground.component.html
@@ -1,1 +1,3 @@
-<div id="dashboard-embed"></div>
+<!-- <div id="dashboard-embed"></div> -->
+
+<my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
