--- a/prms-bi-client/src/app/pages/bi-list/bi-list.component.html
+++ b/prms-bi-client/src/app/pages/bi-list/bi-list.component.html
@@ -1,10 +1,10 @@
 <div class="reports">
-    <a [routerLink]="'/bi/'+report.name" [queryParams]="report?.queryParams"
-        [hidden]="!report?.description && !report?.title" *ngFor="let report of this.reportsInformation; let i=index">
-        <div class="report_title">{{report?.title}}</div>
-        <div class="report_description" [innerHTML]="report.description"></div>
-        <div class="report_description"> <strong>Name</strong> {{report.name}}</div>
-        <div class="report-filters" [innerHTML]="getFilterData(report)">
-        </div>
-    </a>
+  <a [routerLink]="'/bi/'+report.report_name" target="_blank" [queryParams]="report?.queryParams"
+    *ngFor="let report of this.reportsInformation; let i=index">
+    <div class="report_title">{{report?.report_title}}</div>
+    <div class="report_description" [innerHTML]="report.report_description"></div>
+    <div class="report_description"> <strong>Name</strong> {{report.report_name}}</div>
+    <div class="report-filters" [innerHTML]="getFilterData(report)">
+    </div>
+  </a>
 </div>
