:recycle: refactor (bi-reports) LFUB-1483: Loader added

--- a/prms-bi-client/src/app/pages/bi/bi.component.html
+++ b/prms-bi-client/src/app/pages/bi/bi.component.html
@@ -1,3 +1,7 @@
+<ng-container *ngIf="this.biImplementationSE.showExportSpinner">
+  <app-loader></app-loader>
+</ng-container>
+
 <div class="reportDescription" id="reportDescription"></div>
 <div #reportContainer id="reportContainer" *ngIf="this.reportName" [style.height]="biHeight()">
 </div>
