:recycle: refactor (bi-reports) LFUB-1483: Loader and file name changed

--- a/prms-bi-client/src/app/components/loader/loader.component.html
+++ b/prms-bi-client/src/app/components/loader/loader.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="text"> Downloading file...
+  <div class="text"> Generating the file...
   </div>
   <div class="loading">
     <span></span>
