--- a/prms-bi-client/src/app/components/loader/loader.component.html
+++ b/prms-bi-client/src/app/components/loader/loader.component.html
@@ -1,7 +1,8 @@
-<div class="content">
-  <div class="text"> Generating the file...
-  </div>
-  <div class="loading">
-    <span></span>
+<div class="loader_container">
+  <div class="content">
+    <div class="text">Generating the file...</div>
+    <div class="loading">
+      <span></span>
+    </div>
   </div>
 </div>
