:recycle: refactor (Reload modal) LFUB-1483: added validation to show inactive alert

--- a/prms-bi-client/src/app/pages/bi/bi.component.html
+++ b/prms-bi-client/src/app/pages/bi/bi.component.html
@@ -2,7 +2,7 @@
   <app-loader></app-loader>
 </ng-container>
 
-<div class="inactive-alert">
+<div class="inactive-alert" *ngIf="this.wasInactive">
   <div class="inactive-alert__content">
     <div class="inactive-alert__title">Inactive Report</div>
     <div class="inactive-alert__description">
