--- a/prms-bi-client/src/app/pages/bi/bi.component.scss
+++ b/prms-bi-client/src/app/pages/bi/bi.component.scss
@@ -78,3 +78,35 @@
 .inactive-alert__button {
   margin-top: 0.5rem;
 }
+
+
+.monitor_panel {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  background-color: #ffffffe3;
+  padding: 20px;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  box-shadow: 0px 0px 10px 0px #00000063;
+  border-radius: 5px;
+
+  .process {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    i {
+      color: rgb(0, 165, 0) !important;
+
+      &.bad {
+        color: rgb(255, 75, 75) !important;
+      }
+    }
+
+    .text {
+      font-size: .9rem;
+    }
+  }
+}
