--- a/prms-bi-client/src/app/pages/bi/bi.component.scss
+++ b/prms-bi-client/src/app/pages/bi/bi.component.scss
@@ -91,6 +91,45 @@
   flex-direction: column;
   box-shadow: 0px 0px 10px 0px #00000063;
   border-radius: 5px;
+  padding-right: 70px;
+
+
+  .help {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    &:hover {
+      .explanation {
+        display: flex;
+        opacity: 1;
+      }
+    }
+
+    .explanation {
+      display: none;
+      gap: 10px;
+      flex-direction: column;
+      padding: 20px;
+      position: absolute;
+      top: 13px;
+      right: 13px;
+      background-color: #ffffffe3;
+      box-shadow: 0px 0px 10px 0px #00000063;
+      border-radius: 5px;
+      opacity: 0.1;
+
+      .process {
+        white-space: nowrap;
+      }
+    }
+
+    .help_icon {
+      cursor: pointer;
+      color: rgb(74, 116, 255);
+
+    }
+  }
 
   .process {
     display: flex;
@@ -102,6 +141,10 @@
 
       &.bad {
         color: rgb(255, 75, 75) !important;
+      }
+
+      &.optional {
+        color: #5569dd !important;
       }
     }
 
