--- a/prms-bi-client/src/app/pages/bi/bi.component.html
+++ b/prms-bi-client/src/app/pages/bi/bi.component.html
@@ -70,9 +70,16 @@
   </div>
 
   <div class="process" *ngFor="let process of this.variablesSE.processes">
-    <i class="material-icons-round" [ngClass]="{'bad': !process.works,'optional':process.works == 2}">
+    <i *ngIf="process.works !== null; else loggedOut" class="material-icons-round"
+      [ngClass]="{'bad': !process.works,'optional':process.works == 2}">
       {{process.works == 2 ?'fiber_manual_record': (process.works?'check_circle':'cancel')}}
     </i>
+    <ng-template #loggedOut>
+      <i class="loader material-icons-round">
+        adjust
+      </i>
+    </ng-template>
+
     <div class="text">{{process.name}}</div>
   </div>
 </div>
